plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.unfinitas'
version = '0.0.1-SNAPSHOT'
description = 'backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Database
	runtimeOnly 'org.postgresql:postgresql'

	// PDF Parsing
	implementation 'org.apache.pdfbox:pdfbox:3.0.1'

	// File Processing Utilities
	implementation 'commons-io:commons-io:2.15.1'
	implementation 'commons-codec:commons-codec:1.16.0'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

    // OpenAI
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
    // Translation
    implementation 'com.deepl.api:deepl-java:1.3.0'

    // GG AI
    implementation 'com.google.genai:google-genai:1.27.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}
